+ Thêm votiong option content cho phần thống kê + Thêm combo box để lựa xem câu hỏi nhiều comment nhất ở phần thống kê

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Login/index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Login/index.cshtml
@@ -1,15 +1,18 @@
 ﻿
 @{
     Layout = null;
+
 }
 
 <!DOCTYPE html>
-<link rel="stylesheet" href="~/Content/CustomCss/login.css">
 
 <html>
 <head>
+    <link rel="stylesheet" href="~/Content/CustomCss/login.css">
+    <title>Join.vn</title>
+    <!-- Favicon-->
+    <link rel="shortcut icon" type="image/x-icon" href="~/Content/img/LogoMakr_6CVPn5.png">
     <meta name="viewport" content="width=device-width" />
-    <title>index</title>
 </head>
 <body>
     <div class="wrapper">
