--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/css/custom.css">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/img/favicon.ico">
+    <link rel="shortcut icon" href="~/Content/img/LogoMakr_6CVPn5.png">
     <!-- Font Awesome CDN-->
     <!-- you can replace it by local Font Awesome-->
     <script src="~/Content/bootstrap/Dashboard/use.fontawesome.com/99347ac47f.js"></script>
@@ -60,12 +60,12 @@
         <div class="side-navbar-wrapper">
             <div class="sidenav-header sidenav-header-custom d-flex align-items-center justify-content-center">
                 <div class="sidenav-header-inner text-center">
-                    <img src="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/img/avatar-1.jpg" alt="person" class="img-fluid rounded-circle">
-                    <h2 class="h5 text-uppercase">Anderson Hardy</h2><span class="text-uppercase">Web Developer</span>
+                    <img src="~/Content/img/LogoMakr_6CVPn5.png" alt="person" class="img-fluid rounded-circle">
+                    @*<h2 class="h5 text-uppercase">Anderson Hardy</h2><span class="text-uppercase">Web Developer</span>*@
                 </div>
                 <div class="sidenav-header-logo">
                     <a class="brand-small text-center" style="font-family: Montserrat-Regular">
-                        <img src="~/Content/img/LogoMakr_7clv31.png" />
+                        <img src="~/Content/img/LogoMakr_6CVPn5.png"/>
                     </a>
                 </div>
             </div>
