--- a/Capstone-Project-EIP/CapstoneProject-EIP/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/Views/Home/Index.cshtml
@@ -30,8 +30,7 @@
     <title>Join.vn</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="~/Content/Template/eventalk/img/favicon.png">
+    
     <!-- Modernizr Js -->
     @*<script src="~/Content/Template/eventalk/js/modernizr-2.8.3.min.js"></script>*@
 </head>
@@ -97,12 +96,12 @@
         </div>
         <!-- Slider Area End Here -->
         <!-- About Area Start Here -->
-        <section class="section-space-big bg-common bg-accent" style="background-image: url(~/Content/Template/eventalk/img/figure/figure3.png);">
+        <section class="section-space-big bg-common bg-accent" style="background-image: url(../../Content/Template/eventalk/img/figure/figure3.jpg);">
             <div class="container">
                 <div class="about-layout3">
                     <img src="~/Content/Template/eventalk/img/about/about-logo.png" alt="logo" class="img-fluid">
                     <p>
-                       
+
                         @Html.Raw(Model.EventDescription)
                     </p>
                 </div>
@@ -190,7 +189,7 @@
                     </ul>
                     <div class="schedule-content">
                         <div class="tab-content">
-                            @for (int i = 0; i <  Model.Sessions.Count(); i++)
+                            @for (int i = 0; i < Model.Sessions.Count(); i++)
                             {
                                 var activityItem = Model.Sessions.ElementAt(i).Activities;
 
@@ -256,7 +255,7 @@
         </section>
         <!-- Schedule Area End Here -->
         <!-- Pricing Plan Area Start Here -->
-        <section id="register" class="section-space-default-less30 overlay-icon-layout2 bg-common bg-accent" style="background-image: url(~/Content/Template/eventalk/img/figure/figure5.png);">
+        <section id="register" class="section-space-default-less30 overlay-icon-layout2 bg-common bg-accent" @*style="background-image: url(../../Content/Template/eventalk/img/figure/figure4.png);"*@>
             <div class="container zindex-up">
                 <div class="section-heading title-black color-dark text-left">
                     <h2>Đăng kí</h2>
@@ -266,8 +265,10 @@
                     <p class="error-title" id="errorName">Vui lòng nhập tên</p>
                     <input id="guestPhone" placeholder="Số điện thoại(bắt buộc)" type="tel" class="custom-input" />
                     <p class="error-title" id="errorPhone">Vui lòng nhập số điện</p>
+                    <p class="error-title" id="errorPhoneFormat">Số điện thoại không đúng định dạng</p>
                     <input id="guestEmail" placeholder="Email(bắt buộc)" type="email" class="custom-input" />
                     <p class="error-title" id="errorEmail">Vui lòng nhập email</p>
+                    <p class="error-title" id="errorEmailFormat">Email không đúng định dạng</p>
                     <button id="btn-submit">Register <span class="fa fa-chevron-right"></span></button>
                 </div>
             </div>
@@ -320,21 +321,21 @@
             <div class="container-fluid">
                 <div class="google-map-area">
                     @*<div id="googleMap" style="width:100%; height:496px;">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.4667109038546!2d106.69877591480079!3d10.775521892322164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f479e4f95db%3A0xcae127d5b519b548!2sRex+Hotel!5e0!3m2!1sen!2s!4v1527840226572" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                        
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.4667109038546!2d106.69877591480079!3d10.775521892322164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f479e4f95db%3A0xcae127d5b519b548!2sRex+Hotel!5e0!3m2!1sen!2s!4v1527840226572" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-                    </div>*@
+
+                        </div>*@
                     <div id="map" style="width:100%; height:496px;">
 
                     </div>
                     @*<div class="upcoming-event-layout1">
-                        <h2>
-                            Marketing
-                            <br> Conferance 2018
-                        </h2>
-                        <div class="date">17 - 25 Oct, 2018</div>
-                        <p>Tobacco Dock, London</p>
-                    </div>*@
+                            <h2>
+                                Marketing
+                                <br> Conferance 2018
+                            </h2>
+                            <div class="date">17 - 25 Oct, 2018</div>
+                            <p>Tobacco Dock, London</p>
+                        </div>*@
                 </div>
             </div>
         </section>
@@ -385,10 +386,25 @@
                 if (phone.length === 0) {
                     isValid = false;
                     $('#errorPhone').css('display', 'block');
+
+                }
+                else {
+                    if (!phonenumber(phone)) {
+                        isValid = false;
+                        $('#errorPhoneFormat').css('display', 'block');
+                    }
+                    
                 }
                 if (email.length === 0) {
                     isValid = false;
                     $('#errorEmail').css('display', 'block');
+                    
+                }
+                else {
+                    if (!validateEmail(email)) {
+                        $('#errorEmailFormat').css('display', 'block');
+                        isValid = false;
+                    }
                 }
                 if (isValid) {
                     $.ajax({
@@ -418,6 +434,8 @@
             $('#errorName').css('display', 'none');
             $('#errorPhone').css('display', 'none');
             $('#errorEmail').css('display', 'none');
+            $('#errorEmailFormat').css('display', 'none');
+            $('#errorPhoneFormat').css('display', 'none');
         }
 
         function clearInputRegister() {
@@ -428,7 +446,7 @@
 
         var myLat = @(Model.Latitude);
         var myLng = @(Model.Longitude);
-        
+
         function initMap() {
             var myLatLng = { lat: myLat, lng: myLng };
 
