--- a/Capstone-Project-EIP/CapstoneProject-EIP/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     @Scripts.Render("~/bundles/modernizr")
 
 
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="~/Content/img/LogoMakr_6CVPn5.png">
     <!--Bootstrap CSS-->
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="~/Content/Template/eventalk/css/normalize.css">
@@ -45,8 +48,8 @@
                         <div class="row no-gutters d-flex align-items-center">
                             <div class="col-lg-2 col-md-3 d-none d-lg-block">
                                 <div class="logo-area">
-                                    <a href="index.html">
-                                        <img src="~/Content/Template/eventalk/img/logo-dark2.png" alt="logo">
+                                    <a href="/">
+                                        <img class="img-responsive" src="~/Content/img/LogoMakr_7clv31.png" style="width:110px;" alt="logo">
                                     </a>
                                 </div>
                             </div>
