--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageSession/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageSession/Index.cshtml
@@ -299,7 +299,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-3 form-control-label">Ngày Giờ:</label>
+                    <label class="col-sm-3 form-control-label">Thời gian diễn ra:</label>
 
                     <div class="input-group col-sm-9">
                         <div class="input-group-addon">
@@ -365,10 +365,11 @@
                         </div>
                         <input id="activityName" type="text" class="form-control" placeholder="Nhập tên hoạt động">
                     </div>
+                    <p class="error-title col-lg-offset-3" id="errorNameActivityEdit">Vui lòng nhập tên hoạt động</p>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 form-control-label">
-                        Thời gian Bắt đầu - Kết thúc<span class="required"></span>
+                        Thời gian diễn ra<span class="required"></span>
                     </label>
                     <div class="col-sm-9 input-group">
                         <div class="input-group-addon">
@@ -385,6 +386,8 @@
                         </div>
                         <input id="activityDescription" type="text" class="form-control" placeholder="Nhập miêu tả">
                     </div>
+                    <p class="error-title col-lg-offset-3" id="errorDesActivityEdit">Vui lòng nhập miêu tả hoạt động</p>
+
                 </div>
                 <label class="col-sm-3 form-control-label">Diễn giả:</label>
                 <div class="input-group col-sm-9">
@@ -401,7 +404,7 @@
             </div>
             <div class="modal-footer">
                 <input type="hidden" id="txtActivityId" value="" />
-                <button type="button" id="btn-update-activity" class="btn btn-primary" data-dismiss="modal">Lưu</button>
+                <button type="button" id="btn-update-activity" class="btn btn-primary">Lưu</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
             </div>
         </div>
@@ -533,13 +536,14 @@
 
             $('#AddStartEndTime').daterangepicker({
                 locale: {
-                    format: 'DD/MM/YYYY'
+                    format: 'DD/MM/YYYY HH:mm'
                 },
                 startDate: '@(startDate)',
                 endDate: '@(endDate)',
                 minDate: '@(startDate)',
                 maxDate: '@(endDate)',
-                timePicker: true
+                timePicker: true,
+                timePicker24Hour: true
             });
 
             /*Xóa báo lỗi error ở modal add interaction*/
@@ -553,11 +557,12 @@
             $('#txtActivityId').val(id);
             $('#startEndTime').daterangepicker({
                 locale: {
-                    format: 'DD/MM/YYYY'
+                    format: 'DD/MM/YYYY HH:mm'
                 }, 
                 minDate: '@(startDate)',
                 maxDate: '@(endDate)',
-                timePicker: true
+                timePicker: true,
+                timePicker24Hour: true
             });
 
         }
