--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
@@ -7,11 +7,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login V12</title>
+    <title>Join.vn</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="~/Content/bootstrap/Login_v12/images/icons/favicon.ico" />
+    <link rel="icon" type="image/png" href="~/Content/img/LogoMakr_6CVPn5.png" />
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="~/Content/bootstrap/Login_v12/vendor/bootstrap/css/bootstrap.min.css">
     <!--===============================================================================================-->
