+ Thêm phần ẩn hiện collection ở menu

--- a/Capstone-Project-EIP/CapstoneProject-EIP/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/Views/Home/Index.cshtml
@@ -96,10 +96,10 @@
         </div>
         <!-- Slider Area End Here -->
         <!-- About Area Start Here -->
-        <section class="section-space-big bg-common bg-accent" style="background-image: url(../../Content/Template/eventalk/img/figure/figure3.jpg);">
+        <section class="section-space-big bg-common bg-accent" @*style="background-image: url(../../Content/Template/eventalk/img/figure/figure3.jpg);"*@>
             <div class="container">
                 <div class="about-layout3">
-                    <img src="~/Content/Template/eventalk/img/about/about-logo.png" alt="logo" class="img-fluid">
+                    <img src="~/Content/img/LogoMakr_6CVPn5.png" alt="logo" class="img-fluid">
                     <p>
 
                         @Html.Raw(Model.EventDescription)
@@ -269,7 +269,7 @@
                     <input id="guestEmail" placeholder="Email(bắt buộc)" type="email" class="custom-input" />
                     <p class="error-title" id="errorEmail">Vui lòng nhập email</p>
                     <p class="error-title" id="errorEmailFormat">Email không đúng định dạng</p>
-                    <button id="btn-submit">Register <span class="fa fa-chevron-right"></span></button>
+                    <button id="btn-submit">Đăng kí <span class="fa fa-chevron-right"></span></button>
                 </div>
             </div>
         </section>
