--- a/Capstone-Project-EIP/CapstoneProject-EIP/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/Views/Shared/_Layout.cshtml
@@ -129,11 +129,11 @@
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="widget">
                                     <a class="footer-widget-logo">
-                                        <img class="img-fluid" src="~/Content/Template/eventalk/img/logo.png" alt="logo">
+                                        <img class="img-fluid img-responsive" src="~/Content/img/LogoMakr_6CVPn5.png" alt="logo">
                                     </a>
-                                    <div class="footer-widget-contact">
+                                    @*<div class="footer-widget-contact">
                                         <a></a>
-                                    </div>
+                                    </div>*@
                                     @*<div class="footer-widget-social">
                                         <ul>
                                             <li>
