--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
@@ -38,7 +38,7 @@
                                     <div class="radio">
                                         <label>
                                             <input type="radio" name="group-poll" value="@Model.VotingOptions.ElementAt(i).VotingOptionId">
-                                            <strong>@(i).  </strong>@Model.VotingOptions.ElementAt(i).VotingOptionContent
+                                            &nbsp; &nbsp;  @Model.VotingOptions.ElementAt(i).VotingOptionContent
                                         </label>
                                     </div>
                                 }
