--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/Login.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/Login.cshtml
@@ -49,7 +49,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input id="login-button" type="submit" value="Log in" class="btn btn-default button" />
+                            <input id="login-button" type="submit" value="Đăng nhập" class="btn btn-default button" />
                         </div>
                     </div>
                     @* Enable this once you have account confirmation enabled for password reset functionality
