+ Chỉnh lại footer của landing page + Sửa lỗi layout lịch của landing page + Thêm phần hiện danh sách event sắp diễn ra landing page + Có thể bỏ check câu hỏi đã được trả lời + Thêm phần BriefName cho event trang admin

--- a/Capstone-Project-EIP/CapstoneProject-EIP/Content/Site.css
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/Content/Site.css
@@ -234,3 +234,11 @@ button span {
 .comingsoon-content h2 {
     color:white !important;
 }
+
+.item-img {
+    width:270px;
+    height:190px;
+}
+.item-img img {
+    height:100% !important;
+}
