--- a/Capstone-Project-EIP/CapstoneProject-EIP/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/Views/Shared/_Layout.cshtml
@@ -75,6 +75,9 @@
                                             <li>
                                                 <a href="#contact">Liên hệ</a>
                                             </li>
+                                            <li>
+                                                <a href="#listEvent">Danh sách sự kiện</a>
+                                            </li>
                                         </ul>
                                     </nav>
                                     <!-- Mobile Menu start -->
@@ -97,6 +100,9 @@
                                             </li>
                                             <li>
                                                 <a href="#contact">Liên hệ</a>
+                                            </li>
+                                            <li>
+                                                <a href="#listEvent">Danh sách sự kiện</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -122,110 +128,60 @@
 
         <!-- Footer Area Start Here -->
         <footer>
-            <div class="footer-layout2">
-                <div class="footer-top-area">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12 col-sm-12">
-                                <div class="widget">
-                                    <a class="footer-widget-logo">
-                                        <img class="img-fluid img-responsive" src="~/Content/img/LogoMakr_6CVPn5.png" alt="logo">
-                                    </a>
-                                    @*<div class="footer-widget-contact">
-                                        <a></a>
-                                    </div>*@
-                                    @*<div class="footer-widget-social">
-                                        <ul>
-                                            <li>
-                                                <a href="#" title="facebook">
-                                                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#" title="twitter">
-                                                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#" title="google-plus">
-                                                    <i class="fa fa-google-plus" aria-hidden="true"></i>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#" title="linkedin">
-                                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#" title="pinterest">
-                                                    <i class="fa fa-pinterest" aria-hidden="true"></i>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#" title="rss">
-                                                    <i class="fa fa-rss" aria-hidden="true"></i>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>*@
-                                </div>
+            <div class="footer-layout1 bg-light">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <a class="footer-logo">
+                                <img src="~/Content/img/LogoMakr_6CVPn5.png" alt="logo" class="img-fluid">
+                            </a>
+                            <p style="text-align:center;">
+                                © 2018. All Rights Reserved. Designed by
+                                <a>
+                                    RadiusTheme
+                                </a>
+                            </p>
+                            <div class="footer-social">
+                                <ul>
+                                    <li>
+                                        <a href="#" title="facebook">
+                                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" title="twitter">
+                                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" title="google-plus">
+                                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" title="linkedin">
+                                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" title="pinterest">
+                                            <i class="fa fa-pinterest" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" title="rss">
+                                            <i class="fa fa-rss" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" title="vimeo">
+                                            <i class="fa fa-vimeo" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
-                            @*<div class="col-lg-4 col-md-6 col-sm-12">
-                                <div class="widget">
-                                    <h3 class="widgettitle">Useful Links</h3>
-                                    <div class="footer-widget-menu">
-                                        <ul>
-                                            <li>
-                                                <a href="index.html">Home</a>
-                                            </li>
-                                            <li>
-                                                <a href="about.html">About Us</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Help</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Terms &amp; Privecy</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Support</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Payment Policy</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
-                                <div class="widget">
-                                    <h3 class="widgettitle">Newsletter</h3>
-                                    <div class="footer-widget-newsletter">
-                                        <p>
-                                            Rimply dummy text the printing and typesetting in sum has been the industry's
-                                            standar.
-                                        </p>
-                                        <div class="input-group stylish-input-group">
-                                            <input type="email" placeholder="E-mail address" name="email" class="form-control" required="">
-                                            <span class="input-group-addon">
-                                                <button type="submit">
-                                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
-                                                </button>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>*@
                         </div>
                     </div>
-                </div>
-                <div class="footer-bottom-area">
-                    <p>
-                        © 2018 eventalk. All Rights Reserved. Designed by
-                        <a target="_blank" href="../../../../radiustheme.com/index.html">
-                            RadiusTheme
-                        </a>
-                    </p>
                 </div>
             </div>
         </footer>
@@ -266,6 +222,8 @@
     @*<script src="../../../../maps.googleapis.com/maps/api/js33b9?key=AIzaSyBgREM8KO8hjfbOC0R_btBhQsEQsnpzFGQ"></script>*@
     <!-- Magnific Popup -->
     <script src="~/Content/Template/eventalk/js/jquery.magnific-popup.min.js"></script>
+    <!-- Custom Js -->
+    <script src="~/Content/Template/eventalk/js/main.js"></script>
     <!-- One Page menu action JS -->
     <script src="~/Content/Template/eventalk/js/jquery.nav.js" type="text/javascript"></script>
     <!-- Custom Js -->
